tests/baselines/reference/moduleProperty1.errors.txt
tests/cases/compiler/moduleProperty1.ts(9,5): error TS1128: Declaration or statement expected.
tests/cases/compiler/moduleProperty1.ts(9,13): error TS2304: Cannot find name 'y'.
tests/cases/compiler/moduleProperty1.ts(10,20): error TS2304: Cannot find name 'y'.


==== tests/cases/compiler/moduleProperty1.ts (3 errors) ====
    module M {
        var x=10;  // variable local to this module body
        var y=x;  // property visible only in module
        export var z=y;  // property visible to any code
    }
    
    module M2 {
        var x = 10;  // variable local to this module body
        private y = x;  // can't use private in modules
        ~~~~~~~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS2304: Cannot find name 'y'.
        export var z = y;  // property visible to any code
                       ~
!!! error TS2304: Cannot find name 'y'.
    }